new CheatACtivity created, layoout activity_cheat, cheat button added to activity_quiz, manifest file has new cheatAtcitiviy entry, INTENTS ARE IMPLEMENTED BETWEEN cheat and quiz activity

--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -55,6 +55,17 @@
             android:layout_height="wrap_content"
             android:text="@string/previous_button"/>
     </LinearLayout>
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/activity_horizontal_margin">
+        <Button
+            android:id="@+id/cheat_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:text="@string/cheat_button"/>
+    </FrameLayout>
 
 </LinearLayout>
 
