showcheat button to cheat aCtivity with functionality implemented, Design altered, Cheat acitvity renamed

--- a/app/src/main/res/layout/activity_cheat.xml
+++ b/app/src/main/res/layout/activity_cheat.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,6 +7,27 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.my.amit.mathquiz.CheatActivity">
+    android:gravity="center"
+    tools:context="com.my.amit.mathquiz.CheatActivity"
+    android:baselineAligned="false"
+    android:orientation="vertical">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="24dp"
+        android:text="@string/cheat_warning_text" />
+    <TextView
+        android:id="@+id/cheatAnswer_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="24dp"
+        tools:text="Answer" />
+    <Button
+        android:id="@+id/show_cheat_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/show_cheat_button" />
 
-</RelativeLayout>
+
+
+</LinearLayout>
