--- a/app/src/main/res/layout-land/activity_quiz.xml
+++ b/app/src/main/res/layout-land/activity_quiz.xml
@@ -41,22 +41,34 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content">
 
-        <Button
-            android:id="@+id/next_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal|center_vertical|bottom|left"
-            android:text="@string/next_button"/>
-        <Button
-            android:id="@+id/previous_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|center_horizontal|bottom|right"
-            android:text="@string/previous_button"/>
     </LinearLayout>
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/activity_horizontal_margin"></FrameLayout>
+
+    <Button
+        android:id="@+id/cheat_button"
+        android:layout_width="129dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right|bottom"
+        android:text="@string/cheat_button"/>
+
+    <Button
+        android:id="@+id/previous_button"
+        android:layout_width="115dp"
+        android:layout_height="wrap_content"
+        android:text="@string/previous_button"
+        android:layout_gravity="center_horizontal|bottom" />
+
+    <Button
+        android:id="@+id/next_button"
+        android:layout_width="140dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left|bottom"
+        android:text="@string/next_button" />
 
 </FrameLayout>
 
